--- a/index.html
+++ b/index.html
@@ -5,50 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./index-2.css">
-    <link rel="stylesheet" href="./index-3.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./first.css">
 </head>
 <body>
         <div class="main-container">
-                <!-- top header -->
-                <header>
-                        <div class="header-inner">
-                                <div class="top-part-header">
-                                        <div class="left-side">
-                                                <div class="zomato-div">zomato</div>
-                                                <div class="search-bar-div">
-                                                        <img src="./pin-location-icon.svg" class="location" alt="location">
-                                                        <input type="text" class="first" placeholder="Nava Naroda,Ahmedabad">
-                                                        <img src="./search.svg" alt="search-icon" class="search-icon">
-                                                        <input type="text" class="second" placeholder="Search for restaurant, cuisine or a dish">
-                                                    </div>
-                                        </div>
-                                        <div class="right-side">
-                                                <img src="./unnamed.jpg" class="user-image" alt="">
-                                                <div class="user-name">Rahul</div>
-                                        </div>
+            <!-- header -->
+                <header class="header">
+                    <!-- top part -->
+                        <div class="top-part-main">
+                            <div class="left-part">Get the App</div>
+                            <div class="right-part">
+                                    <div class="investor-div">Investor Relations</div>
+                                    <div class="add-restaurant">Add Restaurant</div>
+                                    <div class="profile"><img class="user-profile" src="./unnamed.jpg" alt="user-profile"><div class="user-name">Rahul</div></div>
+                            </div>
+                        </div>
+                        <!-- center part -->
+                        <div class="center-main-div">
+
+                                <div class="center-bar-top">
+                                    <div class="zomato-div">zomato</div>
+                                    <div class="discover-div">Discover the best food & drinks in Ahmedabad</div>
                                 </div>
-                                <div class="top-part-middle">
-                                        <div class="top-part-middle-inside"></div>
-                                        <div class="text-content">Home / India / Ahmedabad / East Ahmedabad /<span> Naroda Restaurants</span></div>
-                                </div>
-                                <div class="top-part-bottom">
-                                                <div class="left">
-                                                        <div class="dine-image-div"><img class="dine-image" src="./30fa0a844f3ba82073e5f78c65c18b371616149662.avif" alt=""></div>
-                                                        <div class="dine-out-text">Dining Out</div>
-                                                </div>
-                                                <div class="right">
-                                                        <div class="delivary-image-div"><img class="delivary-image" src="./246bbd71fbba420d5996452be3024d351616150055.webp" alt=""></div>
-                                                        <div class="delivary-text">Delivary</div>
-                                                </div>
+
+                                <div class="search-bar-div">
+                                    <img src="./pin-location-icon.svg" class="location" alt="location">
+                                    <input type="text" class="first" placeholder="Nava Naroda,Ahmedabad">
+                                    <img src="./search.svg" alt="search-icon" class="search-icon">
+                                    <input type="text" class="second" placeholder="Search for restaurant, cuisine or a dish">
                                 </div>
                         </div>
                 </header>
 
-                <main>
+                <!-- main content  -->
+                <main class="main">
+
+                        <div class="middle-div">
+                            </div>
+
+                        <!-- Third div -->
                         <div class="third-div">
                                 <div class="top-text">
                                     <div class="collection-div">Collections</div>
@@ -59,39 +56,49 @@
                                 </div>
 
                                 <div class="slides-div">
-                                    <!-- <div class="image-1">
-                                        <div class="image-1-text-div">
-                                            <div class="image-1-text-top">Newly Opened Restaurant</div>
-                                            <div class="image-1-text-bottom">25 Places</div>
-                                        </div>
-                                    </div> -->
                                 </div>
                         </div>
-
-                        <div class="filter-buttons-main-div">
-                                <div class="filter-button-div">
-                                        <button><img class="filter" src="./Filter-12.svg" alt=""> Filters</button>
-                                        <button>Offers</button>
-                                        <button>Rating: 4.5+</button>
-                                        <button>Pet Friendly</button>
-                                        <button>Outdoor Seating</button>
-                                        <button>Open Now</button>
+                        
+                        <div class="fourth-part">
+                            <div class="fourth-part-child">
+                                <div class="fourth-part-heading">Popular localities in and around Ahmedabad</div>
+                                <div class="select-grid">
                                 </div>
+                            </div>
                         </div>
 
-                        <div class="last-second-part">
-                                <img  class="ad-img" src="./e067a1cf0d3fe27b366402b98b994e9f1716296909.avif" alt="">
-                                <div class="ad-text-div">Naroda Restaurants, Ahmedabad</div>
-                        </div>
+                      <footer>
+                        <div class="end-part-div">
+                            <div class="phone-image-div"><img class="phone-image" src="./ce5bc038a8a2d4f8f24465c8826182af1726501431.avif" alt=""></div>
+                            <div class="end-part-end-div">
+                                <div class="get-app-div">
+                                    <div class="get-app-div-top">Get the Zomato app</div>
+                                    <div class="get-app-div-bottom">We will send you a link, open it on your phone to download the app</div>
+                                </div>
+                                <div class="log-in-div">
+                                    <div class="log-in-div-top">
+                                        <input class="radio-1" name="ans" type="radio">
+                                        <label for="email">Email</label>
+                                        <input class="radio-2" name="ans"  type="radio">
+                                       <label for="Phone">Phone</label>
+                                    </div>
+                                    <div class="info-input-div">
+                                        <input placeholder="Email" class="input-email" type="text">
+                                        <button class="share-app-button">Share App Link</button>
+                                    </div>
+                                </div>
 
-                        <div class="last-part">
-                                <div class="last-grid">
-                                </div> 
+                                <div class="last-part-last">
+                                    <div class="last-part-last-text">Download app from</div>
+                                    <img src="./playstore.webp" class="playstore-image" alt="">
+                                    <img src="./appstore.webp" class="appstor-image" alt="">
+                                </div>
+                            </div>
                         </div>
-                </main>   
-        
+                      </footer>
+
+                </main>
         </div>
 </body>
-<script src="./index.js"></script>
-<!-- <script src="./index2.js"></script> -->
+<script src="./first.js"></script>
 </html>
