--- a/second.html
+++ b/second.html
@@ -92,6 +92,6 @@
         
         </div>
 </body>
-<script src="./index.js"></script>
+<script src="./second.js"></script>
 <!-- <script src="./index2.js"></script> -->
 </html>
