--- a/index.html
+++ b/index.html
@@ -100,5 +100,5 @@
                 </main>
         </div>
 </body>
-<script src="./first.js"></script>
+<script src="./index.js"></script>
 </html>
